# WanganArcadeLoader

./: .gitignore  Makefile  meson.build
.github/workflows/: build.yml
src/: dllmain.cpp  dllmain.h  ffb.cpp  ffb.h  helpers.cpp  helpers.h  hooks.asm  poll.cpp  poll.h
subprojects/: minhook.wrap
